--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@
 /.next/
 /out/
 
+
+#IDE'S
+.idea
+
 # production
 /build
 
@@ -29,6 +33,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+.swc
 
 # env files (can opt-in for committing if needed)
 .env*
