--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.294.0",
     "recharts": "^2.15.1",
+    "next-themes": "^0.4.4",
     "next": "14.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
